# ProjetCommande

./: README.md  pyproject.toml  reportgpt.md
AgentAnalyste/: pyproject-old.toml  pyproject.toml
AgentAnalyste/src/latest_ai_development/: crew.py  main.py
AgentAnalyste/src/latest_ai_development/config/: agents.yaml  tasks.yaml
AgentAnalyste/src/latest_ai_development/tools/: custom_tool.py
AgentSécurité/: report.md  training_data.pkl
AgentSécurité/db/: chroma.sqlite3
AgentSécurité/src/ekip/: basedonnee.txt  crew.py  main.py
AgentSécurité/src/ekip/config/: agents.yaml  tasks.yaml
AgentSécurité/src/ekip/tools/: custom_tool.py
agentsecre/: README.md  pyproject.toml
agentsecre/src/agentsecre/: crew.py  main.py
agentsecre/src/agentsecre/config/: agents.yaml  tasks.yaml
agentsecre/src/agentsecre/tools/: custom_tool.py
src/ekip/: crew.py  main.py
src/ekip/config/: agents.yaml
