[tool.poetry]
name = "ekip"
version = "0.1.0"
description = "ekip using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.61.0,<1.0.0" }


[tool.poetry.scripts]
ekip = "ekip.main:run"
run_crew = "ekip.main:run"
train = "ekip.main:train"
replay = "ekip.main:replay"
test = "ekip.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
