[tool.poetry]
name = "agentsecre"
version = "0.1.0"
description = "agentsecre using crewAI"
authors = ["Your Name <you@example.com>" ]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.61.0,<1.0.0" }
google-auth-oauthlib = "^1.2.1"
google-api-python-client = "^2.155.0"

[tool.poetry.scripts]
agentsecre = "agentsecre.main:run"
run_crew = "agentsecre.main:run"
train = "agentsecre.main:train"
replay = "agentsecre.main:replay"
test = "agentsecre.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
